This is the CHANGELOG for amavisd-milter.

20080701:
	Sync fts_open.c with the NetBSD libc (upstream) fts.c, which brought
	in a few fixes, including one that looked like a potential memory leak.
	Thanks to: Luke Mewburn <luke@mewburn.net>

	Properly check -D option parameters.
	Thanks to: Henrik K <hege@hege.li>

20080310:
	Convert CRLF to LF in mail body, because sendmail send always CRLF,
	but amavisd-new requires that a message on a temporary file is in
	a native text format of a host's file system, i.e. with LF terminated
	lines on Unix or Linux.
	Thanks to: David Schweikert <david@schweikert.ch> and Mark Martinec
	<Mark.Martinec@ijs.si>

20070923:
	amavisd-milter-1.3.1

	Bug fixies:
	- Properly calculate timezone offset for synthesized Received header
	  on platforms where gmtime() and localtime() returns the pointer to
	  the same static struct.

20070923:
	Better explained -D option.

20070915:
	In mlfi.c:mlfi_envfrom() the gmtime() and localtime() call returns the
	pointer to the same static struct.  Thus pointers gt and lt are
	identical and the UTC offset is always +0000 which is bogus.
	Thanks to: Curtis Doty <curtis@greenkey.net>

20070902:
	amavisd-milter-1.3.0

	New features:
	- Implemented AM.PDP request attribute policy_bank (amavisd-new
	  2.5.0 or higher is required).  Currently SMTP_AUTH, SMTP_AUTH_<MECH>
	  and SMTP_AUTH<MECH>_<BITS> policy bank names are sent when the remote
	  client is authenticated.
	- Added new amavisd-milter option -D client|server which allow
	  personalized header or body modifications.

	Bug fixies:
	- fixed bug when amavisd communication buffer is growing.

	Compatibility:
	- properly get queue id when amavisd-milter is used with postfix.

	Performance:
	- improved performance under heavy load.

20070901:
	Performance optimization: use sem_timedwait instead of
	sem_trywait+sleep(1) for amavisd connection lock.
	Requested by: David Schweikert <david@schweikert.ch>

20070831: