@@ -1,78 +1,27 @@
-# $Id$
-#
-# http://cvs.savannah.gnu.org/viewvc/gnulib/gnulib/m4/dirfd.m4
+# $Id: dirfd.m4,v 1.1 2008/07/02 23:20:16 reho Exp $
 
-#serial 14   -*- Autoconf -*-
+# Find out how to get the file descriptor associated with an open DIR*.
 
-dnl Find out how to get the file descriptor associated with an open DIR*.
-
-# Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006 Free Software
-# Foundation, Inc.
-# This file is free software; the Free Software Foundation
-# gives unlimited permission to copy and/or distribute it,
-# with or without modifications, as long as this notice is preserved.
-
-dnl From Jim Meyering
-
-AC_DEFUN([gl_FUNC_DIRFD],
+AC_DEFUN([AC_CHECK_DIRFD],
 [
-  dnl Work around a bug of AC_EGREP_CPP in autoconf-2.57.
+  AH_TEMPLATE([HAVE_DIRFD_AS_MACRO], [Define if dirfd() is a macro.])
   AC_REQUIRE([AC_PROG_CPP])
   AC_REQUIRE([AC_PROG_EGREP])
-  AC_CHECK_FUNCS(dirfd)
-  AC_CHECK_DECLS([dirfd], , ,
-    [#include <sys/types.h>
-     #include <dirent.h>])
-
-  AC_CACHE_CHECK([whether dirfd is a macro],
-    gl_cv_func_dirfd_macro,
-    [AC_EGREP_CPP([dirent_header_defines_dirfd], [
-#include <sys/types.h>
+  AC_HEADER_DIRENT
+  AC_CHECK_MEMBERS([DIR.d_fd, DIR.dd_fd, DIR.__dd_fd],
+    [], [], [#include <dirent.h>])
+  AC_CHECK_FUNCS([dirfd])
+  AS_IF([test "$ac_cv_func_dirfd" = no],
+    [AC_CACHE_CHECK([whether dirfd is a macro], [ac_cv_func_dirfd_macro],
+      [AC_EGREP_CPP([func_dirfd_macro], [
 #include <dirent.h>
-#ifdef dirfd
- dirent_header_defines_dirfd
-#endif],
-       gl_cv_func_dirfd_macro=yes,
-       gl_cv_func_dirfd_macro=no)])
-
-  # Use the replacement only if we have no function, macro,
-  # or declaration with that name.
-  if test $ac_cv_func_dirfd,$ac_cv_have_decl_dirfd,$gl_cv_func_dirfd_macro \
-      = no,no,no; then
-    AC_REPLACE_FUNCS([dirfd])
-    AC_CACHE_CHECK(
-	      [how to get the file descriptor associated with an open DIR*],
-		   gl_cv_sys_dir_fd_member_name,
-      [
-	dirfd_save_CFLAGS=$CFLAGS
-	for ac_expr in d_fd dd_fd; do
-
-	  CFLAGS="$CFLAGS -DDIR_FD_MEMBER_NAME=$ac_expr"
-	  AC_TRY_COMPILE(
-	    [#include <sys/types.h>
-	     #include <dirent.h>],
-	    [DIR *dir_p = opendir("."); (void) dir_p->DIR_FD_MEMBER_NAME;],
-	    dir_fd_found=yes
-	  )
-	  CFLAGS=$dirfd_save_CFLAGS
-	  test "$dir_fd_found" = yes && break
-	done
-	test "$dir_fd_found" = yes || ac_expr=no_such_member
-
-	gl_cv_sys_dir_fd_member_name=$ac_expr
-      ]
-    )
-    if test $gl_cv_sys_dir_fd_member_name != no_such_member; then
-      AC_DEFINE_UNQUOTED(DIR_FD_MEMBER_NAME,
-	$gl_cv_sys_dir_fd_member_name,
-	[the name of the file descriptor member of DIR])
-    fi
-    AH_VERBATIM(DIR_TO_FD,
-		[#ifdef DIR_FD_MEMBER_NAME
-# define DIR_TO_FD(Dir_p) ((Dir_p)->DIR_FD_MEMBER_NAME)
-#else
-# define DIR_TO_FD(Dir_p) -1
-#endif
-])
+#if defined(dirfd)
+func_dirfd_macro
+#endif],[ac_cv_func_dirfd_macro=yes],[ac_cv_func_dirfd_macro=no]
+      )
+    ])
+  ])
+  if test "$ac_cv_func_dirfd_macro" = yes; then
+    AC_DEFINE([HAVE_DIRFD_AS_MACRO], [1])
   fi
 ])
